<resources>
    <string name="app_name">QRCode</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full name</string>
    <string name="organization">Organization</string>
    <string name="my_qr">My QR</string>
    <string name="address">Address</string>
    <string name="phone">Phone number</string>
    <string name="email">Email</string>
    <string name="note">Note</string>
    <string name="export">Export</string>
    <string name="text">Text</string>
    <string name="content_from_clipboard">Clipboard</string>
    <string name="url">Website</string>
    <string name="contact">Contact</string>
    <string name="sms">SMS</string>
    <string name="geo">GEO</string>
    <string name="wifi">Wifi</string>
    <string name="subject">Subject</string>
    <string name="body">Body</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="query">Query</string>
    <string name="share_your_contact_info_via_qr">Share your contact info via QR</string>
    <string name="only_enter_data_you_want_to_share_when_done_click_export_next_time_you_open_my_qr_your_contact_qr_will_be_displayed">Only enter data you want to share. When done click export . Next time you open My QR your contact QR will be displayed.</string>
    <string name="web_search">Web Search</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="color_scheme">Color scheme</string>
    <string name="theme">Theme</string>
    <string name="beep">Beep</string>
    <string name="vibrate">Vibrate</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="url_info">URL info</string>
    <string name="batch_scan_mode">Batch scan mode</string>
    <string name="use_auto_focus">Use auto focus</string>
    <string name="touch_focus">Touch focus</string>
    <string name="message">Message</string>
    <string name="ssid_network_name">SSID/Network name</string>
    <string name="password">Password</string>
    <string name="qr_code">QR CODE</string>
    <string name="scan">Scan</string>
    <string name="scan_image">Scan Image</string>
    <string name="favorites">Favorites</string>
    <string name="history">History</string>
    <string name="create_qr">Create QR</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="call">Call</string>
    <string name="add_contact">Add contact</string>
    <string name="open">Open</string>
    <string name="show_map">Show map</string>
    <string name="send_email">Send Email</string>
    <string name="send_sms">Send SMS</string>
    <string name="send_mms">Send MMS</string>
    <string name="get_directions">Get directions</string>
    <string name="add_event">Add event</string>
    <string name="connect">Connect</string>
    <string name="copy_password">Copy password</string>
    <string name="my_card">My Card</string>
    <string name="calendar">Calendar</string>
    <string name="event_name">Event name</string>
    <string name="all_day_event">All day event</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
</resources>