<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_location"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

        <TextView
            android:text="@string/geo"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <EditText
        android:id="@+id/edt_latitude"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/latitude"
        android:padding="15dp"
        android:background="@drawable/botron"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_longitude"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/longitude"
        android:padding="15dp"
        android:background="@drawable/botron"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_query"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/query"
        android:padding="15dp"
        android:background="@drawable/botron"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_exportGeo"
        android:background="@drawable/botron"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/export"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>