<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_sms"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

        <TextView
            android:text="@string/sms"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <EditText
        android:id="@+id/edt_phone"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/phone"
        android:padding="10dp"
        android:background="@drawable/botron"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/edt_message"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/message"
        android:paddingBottom="60dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:background="@drawable/botron"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_exportSms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/botron"
        android:text="@string/export"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>