<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/white"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_calendar"/>

        <TextView
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:text="@string/calendar"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <EditText
        android:padding="10dp"
        android:id="@+id/edt_eventName"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/event_name"
        android:background="@drawable/botron"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="Start:"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="match_parent"
            android:calendarViewShown="true"
            android:spinnersShown="false"
            android:layout_weight="4"
            android:layout_height="4dp" />

        <TimePicker
            android:id="@+id/time_picker"
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="4dp" />

<!--        <TextView-->
<!--            android:id="@+id/datePicker"-->
<!--            android:text="20/09/2022"-->
<!--            android:textSize="15sp"-->
<!--            android:textStyle="bold"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textAppearance="?android:attr/textAppearanceMedium" />-->

<!--        <TextView-->
<!--            android:id="@+id/timePicker"-->
<!--            android:layout_marginLeft="15dp"-->
<!--            android:text="16:44"-->
<!--            android:textStyle="bold"-->
<!--            android:textSize="15sp"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textAppearance="?android:attr/textAppearanceMedium" />-->
    </LinearLayout>

    <TextView
        android:text="End:"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="20/09/2022"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_marginLeft="15dp"
            android:text="16:44"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <CheckBox
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/cb_allDay"
        android:text="@string/all_day_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:padding="10dp"
        android:id="@+id/edt_locationCalendar"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/botron"
        android:hint="@string/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_description"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingBottom="50dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:background="@drawable/botron"
        android:hint="@string/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/exportCalendar"
        android:text="@string/export"
        android:textStyle="bold"
        android:background="@drawable/botron"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>